Adds bootstrap, jquery and popper & text-field component

--- a/src/app.html
+++ b/src/app.html
@@ -1,3 +1,15 @@
 <template>
-  <h1>${message}</h1>
+  <!-- Requirements -->
+  <require from="./components/text-field"></require>
+  <require from="./app.css"></require>
+
+  <!-- Child components-->
+
+  <div class="container-fluid">
+    <div clas="row">
+      <div class="col-md-3 mt-4">
+        <text-field></text-field>
+      </div>
+    </div>
+  </div>
 </template>
