Add style and attributes

--- a/src/app.html
+++ b/src/app.html
@@ -8,7 +8,10 @@
   <div class="container-fluid">
     <div clas="row">
       <div class="col-md-3 mt-4">
-        <text-field></text-field>
+        <text-field
+        label="Otsikko"
+        placeholder="Kirjoite teksti tähän"
+        ></text-field>
       </div>
     </div>
   </div>
