Add hasBeenEdited functionality and some styles

--- a/src/app.html
+++ b/src/app.html
@@ -11,6 +11,7 @@
         <text-field
         label="Otsikko"
         placeholder="Kirjoite teksti tähän"
+        error-message="Virhe!"
         ></text-field>
       </div>
     </div>
