Add suffix container

--- a/src/app.html
+++ b/src/app.html
@@ -11,7 +11,9 @@
         <text-field
         label="Otsikko"
         placeholder="Kirjoite teksti tähän"
-        ></text-field>
+        show-clear-button="true"
+        >
+      </text-field>
       </div>
     </div>
   </div>
