Add allow-only-numbers feature

--- a/src/app.html
+++ b/src/app.html
@@ -12,6 +12,9 @@
         label="Otsikko"
         placeholder="Kirjoite teksti tähän"
         show-clear-button="true"
+        disable = "false"
+        first-letter-upper-case = "true"
+        allow-only-numbers = "false"
         >
       </text-field>
       </div>
