Add styles and change attribute features

--- a/src/app.html
+++ b/src/app.html
@@ -11,10 +11,10 @@
         <text-field
         label="Otsikko"
         placeholder="Kirjoite teksti tähän"
-        show-clear-button="true"
-        disable = "false"
-        first-letter-upper-case = "true"
-        allow-only-numbers = "false"
+        show-clear-button.bind="true"
+        disable.bind = "false"
+        first-letter-upper-case.bind = "true"
+        allow-only-numbers.bind = "false"
         >
       </text-field>
       </div>
