Add error message feature

--- a/src/app.html
+++ b/src/app.html
@@ -17,7 +17,9 @@
         allow-only-numbers.bind = "false"
         >
       </text-field>
-      <checkbox name="Checkbox label"></checkbox>
+      <checkbox 
+      name="Checkbox label"
+      ></checkbox>
       </div>
     </div>
   </div>
