Add combobox component

--- a/src/app.html
+++ b/src/app.html
@@ -30,6 +30,7 @@
         disable.bind="false"
         disable-custom-values.bind="false"
         hide-suffix-container.bind="false"
+        items.to-view="items"
         ></combobox>
       </div>
     </div>
