feridun's component repo cloned. text-field brought to date-picker.html

--- a/src/app.html
+++ b/src/app.html
@@ -19,5 +19,10 @@
         </text-field>
       </div>
     </div>
+    <div clas="row">
+      <div class="col-md-3 mt-4">
+        <date-picker class="mb-3"></date-picker>
+      </div>
+    </div>
   </div>
 </template>
